Fix desktop display in dark mode

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -297,6 +297,27 @@ body .task-list .research {
     width: 30%;
   }
 }
+body footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+body .git {
+  max-width: 30px;
+  max-height: 30px;
+}
+body .contributors {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+  margin-left: 5px;
+}
+body .contacts {
+  margin-top: auto;
+  width: 100%;
+  justify-content: space-between;
+}
 
 .dark-theme {
   background-color: #9FBED2;
@@ -420,27 +441,6 @@ body .task-list .research {
   background-color: #4b2d66;
   color: #E8EDEE;
   border: 3px solid #d2b1ef;
-}
-.dark-theme footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-.dark-theme .git {
-  max-width: 30px;
-  max-height: 30px;
-}
-.dark-theme .contributors {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 20px;
-  margin-left: 5px;
-}
-.dark-theme .contacts {
-  margin-top: auto;
-  width: 100%;
-  justify-content: space-between;
 }
 .dark-theme .modal-container {
   display: none;
